--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,22 @@
 html
 head
-    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     title = Upload Images
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', crossorigin='anonymous')
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", crossorigin="anonymous")
 body
-    h1 Upload image form
+    div(class="container")
+        div(class="row")
+            div(class="col-md-6 col-md-offset-3")
+                h2 Upload Image
+                form(action="", method="POST")
+                    div(class="form-group")
+                        label(for="title") Image title
+                        input(type="text", class="form-control", id="title", name="title", placeholder="Image title")
+                    div(class="form-group")
+                        label(for="description") Description
+                        input(type="text", class="form-control", id="description", name="description", placeholder="Description")
+                    div(class="form-group")
+                        label(for="image") Image
+                        input(type="file", class="form-control", id="image", name="image", placeholder="Image")
+                    div(class="form-group")
+                    button(type="submit" class="btn btn-default") Upload
