--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ body
         div(class="row")
             div(class="col-md-6 col-md-offset-3")
                 h2(class="text-center") Upload Image
-                form(action="", method="POST")
+                form(action="", method="POST", enctype="multipart/form-data")
                     div(class="form-group")
                         label(for="title") Image title
                         input(type="text", class="form-control", id="title", name="title", placeholder="Image title")
