Required image title in form

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ body
                 form(action="", method="POST", enctype="multipart/form-data")
                     div(class="form-group")
                         label(for="title") Image title
-                        input(type="text", class="form-control", id="title", name="title", placeholder="Image title")
+                        input(type="text", class="form-control", id="title", name="title", placeholder="Image title", required)
                     div(class="form-group")
                         label(for="description") Description
                         input(type="text", class="form-control", id="description", name="description", placeholder="Description")
